# flink_ai

./: .gitignore  Makefile  README.md  api.md  clean.sh  init_env  kafka-source.py  run_server.sh  start_server.sh
package/jar_dependencies/: config.yaml
package/python_codes/: proxima_executor.py  python_job_executor.py  tianchi_executor.py  tianchi_main.py
package/whl_dependencies/: analytics_zoo_serving-0.9.0.dev0-py3-none-any.whl
package/whl_dependencies/proxima-tianchi-master-668a0a87cb2a4aa1c68443b1ab05ee5a80008cb4/plugin/: CMakeLists.txt
package/whl_dependencies/proxima-tianchi-master-668a0a87cb2a4aa1c68443b1ab05ee5a80008cb4/plugin/example/: example.py
package/whl_dependencies/proxima-tianchi-master-668a0a87cb2a4aa1c68443b1ab05ee5a80008cb4/plugin/example/index/: example.index
package/whl_dependencies/proxima-tianchi-master-668a0a87cb2a4aa1c68443b1ab05ee5a80008cb4/plugin/include/: plugin_build.h  plugin_searcher.h
package/whl_dependencies/proxima-tianchi-master-668a0a87cb2a4aa1c68443b1ab05ee5a80008cb4/plugin/index/: example.index
package/whl_dependencies/proxima-tianchi-master-668a0a87cb2a4aa1c68443b1ab05ee5a80008cb4/plugin/lib/: readme.txt
package/whl_dependencies/proxima-tianchi-master-668a0a87cb2a4aa1c68443b1ab05ee5a80008cb4/plugin/src/: plugin_build.cc  plugin_searcher.cc
